--- a/RV_to_KeplerParams.ipynb
+++ b/RV_to_KeplerParams.ipynb
@@ -85,20 +85,37 @@
    "execution_count": 6,
    "id": "6e585eed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.165043638879379\n"
+     ]
+    }
+   ],
    "source": [
     "#computing the inclination\n",
     "#output in radians\n",
     "#indeces in python start at 0 \n",
-    "i=np.arccos(h_vec[2]/h)"
+    "i=np.arccos(h_vec[2]/h)\n",
+    "print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "a5336168",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3269406035854874\n"
+     ]
+    }
+   ],
    "source": [
     "# Define Node vector as the cross product of h and K\n",
     "#First define the K vector\n",
@@ -109,7 +126,8 @@
     "if (N_vec[1]>=0):\n",
     "    Omega = np.arccos(N_vec[0]/N)\n",
     "else:\n",
-    "    Omega = 2 * np.pi - np.arccos(N_vec[0]/N)"
+    "    Omega = 2 * np.pi - np.arccos(N_vec[0]/N)\n",
+    "print(Omega)"
    ]
   },
   {
@@ -146,30 +164,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "2f71fa7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.2899364871506\n"
+     ]
+    }
+   ],
    "source": [
     "# argument of the perigee\n",
     "if (e_vec[2]>=0):\n",
     "    omega = np.arccos(np.dot(e_vec,N_vec)/(N*e))\n",
     "else:\n",
-    "    omega = 2 * np.pi - np.arccos(np.dot(e_vec,N_vec)/(N*e))"
+    "    omega = 2 * np.pi - np.arccos(np.dot(e_vec,N_vec)/(N*e))\n",
+    "print(omega)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "7f5f17f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7857482293260034\n"
+     ]
+    }
+   ],
    "source": [
     "#true anomaly\n",
     "if (v_r>=0):\n",
     "    theta=np.arccos(np.dot(e_vec,r_vec)/(r*e))\n",
     "else:\n",
-    "    theta=2*np.pi - np.arccos(np.dot(e_vec,r_vec)/(r*e))"
+    "    theta=2*np.pi - np.arccos(np.dot(e_vec,r_vec)/(r*e))\n",
+    "print(theta)"
    ]
   },
   {
@@ -225,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
