--- a/Kepler.ipynb
+++ b/Kepler.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "18c3ba11-d87c-4840-b3f2-4ff05f01b942",
+   "metadata": {},
+   "source": [
+    "# Computing the time of flight from perigee"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1d182c69-1017-4f29-8909-363877ae429d",
@@ -13,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "093794ba-d0fe-4d5e-98ec-3bb702106660",
    "metadata": {},
    "outputs": [],
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3eb1c583-11ed-4821-aab6-92890f166cf6",
    "metadata": {},
    "outputs": [],
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "49f55f0c-68bc-4e59-bdd5-b5944df040e1",
    "metadata": {},
    "outputs": [],
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "086000f1-41ba-4e11-a089-b2cb9d908c0a",
    "metadata": {},
    "outputs": [
@@ -77,12 +85,12 @@
    "id": "68c2c896-ee07-4e86-8977-02c47a1ce38a",
    "metadata": {},
    "source": [
-    "Compute the True Anomaly from time of flight"
+    "# Compute the True Anomaly from time of flight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "d1811799-eb22-4892-b670-b08d6e3af8fa",
    "metadata": {},
    "outputs": [],
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "a480540c-25e7-4f46-b36d-3ceab8d2e1d6",
    "metadata": {},
    "outputs": [
@@ -120,18 +128,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "c0a9f3d4-0690-47a6-8721-57d47a690fe6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M= 3.60292528772713  rads\n"
+     ]
+    }
+   ],
    "source": [
     "#Compute the Mean Anomaly\n",
-    "M = 2 * np.pi * t / T"
+    "M = 2 * np.pi * t / T\n",
+    "print(\"M=\",M,\" rads\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "98135c12-190c-4e65-a19a-02f69a160c0b",
    "metadata": {},
    "outputs": [
@@ -139,6 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3.479283332730278\n",
       "3.60293  radians\n",
       "3.47928  radians\n"
      ]
@@ -148,7 +166,7 @@
     "# To find the Eccentric Anomaly, we need to solve the Kepler equation with a numerical approach\n",
     "# We will use Newton-Raphson method\n",
     "# Define tolerance\n",
-    "Tol = 1e-8\n",
+    "Tol = 1e-10\n",
     "# Computing the first approximation to E\n",
     "if M < np.pi: \n",
     "    E = M + e/2\n",
@@ -159,14 +177,14 @@
     "while ratio > Tol:\n",
     "    # Function / Function Derivative definition\n",
     "    ratio = (E - e * np.sin(E) - M )/(1 - e * np.cos(E))\n",
-    "    E = E - ratio \n",
+    "    E = E - ratio\n",
     "print('%.5f' %(M),' radians')\n",
     "print('%.5f' %(E),' radians')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "bcd72e3a-b222-424a-86f0-1a62a512c5cc",
    "metadata": {},
    "outputs": [
@@ -190,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "393200f2-c902-43df-b344-b21ce8294012",
    "metadata": {},
    "outputs": [],
@@ -221,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
