--- a/KeplerParameters_to_StateVector.ipynb
+++ b/KeplerParameters_to_StateVector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bfbbc60f",
    "metadata": {},
    "outputs": [],
@@ -14,37 +14,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "820af93c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Input orbital parameters and constants\n",
-    "a=7016 #km\n",
+    "a= 66934.2 #km\n",
     "#h=  19646.8827043885  #km^2/s^2\n",
-    "e=  0.05\n",
-    "i=  45.0  #degrees\n",
-    "Omega=  0.0  #degrees\n",
-    "omega=  20.0  #degrees\n",
-    "theta=  10.0 #degrees\n",
+    "e=  0.4765126\n",
+    "i=  65.6523  #degrees\n",
+    "Omega=  286.0469  #degrees\n",
+    "omega=  68.9808  #degrees\n",
+    "theta=  0.7 #degrees\n",
     "#gravitational parameter\n",
     "mu = 3.986e5 # km^3/s^2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "d7cb4b47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "143603.2870383258\n"
+     ]
+    }
+   ],
    "source": [
     "#compute h from a and e\n",
-    "h=np.sqrt(a*mu*(1 - e ** 2))"
+    "h=np.sqrt(a*mu*(1 - e ** 2))\n",
+    "print(h)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "191b9f77",
    "metadata": {},
    "outputs": [
@@ -52,10 +61,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i= 0.7853981633974483 radians\n",
-      "Omega= 0.0\n",
-      "omega= 0.3490658503988659\n",
-      "theta= 0.17453292519943295\n"
+      "i= 1.1458487965070732 radians\n",
+      "Omega= 4.992460220122967\n",
+      "omega= 1.2039420806597045\n",
+      "theta= 0.012217304763960306\n"
      ]
     }
    ],
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "f661d581",
    "metadata": {},
    "outputs": [
@@ -82,8 +91,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r_p= [6568.6926926  1158.23774969    0.        ]\n",
-      "v_p= [-1.31050184  7.80956922  0.        ]\n"
+      "r_p= [35037.43922929   428.08437241     0.        ]\n",
+      "norm(r_p)= 35040.0542804435\n",
+      "v_p= [-0.03391076  4.09815253  0.        ]\n",
+      "norm(v_p= 4.09829283163296\n"
      ]
     }
    ],
@@ -92,12 +103,14 @@
     "r_p=h**2/mu/(1+e*np.cos(theta))*np.array((np.cos(theta),np.sin(theta),0))\n",
     "v_p=mu / h * np.array((-np.sin(theta), e + np.cos(theta),0))\n",
     "print(\"r_p=\",r_p)\n",
-    "print(\"v_p=\",v_p)"
+    "print(\"norm(r_p)=\",np.linalg.norm(r_p))\n",
+    "print(\"v_p=\",v_p)\n",
+    "print(\"norm(v_p=\",np.linalg.norm(v_p))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "f28597d6",
    "metadata": {},
    "outputs": [
@@ -105,32 +118,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R1= [[ 0.93969262  0.34202014  0.        ]\n",
-      " [-0.34202014  0.93969262  0.        ]\n",
+      "R3W= [[ 0.27642411 -0.96103575  0.        ]\n",
+      " [ 0.96103575  0.27642411  0.        ]\n",
       " [ 0.          0.          1.        ]]\n",
-      "R2= [[ 1.          0.          0.        ]\n",
-      " [ 0.          0.70710678  0.70710678]\n",
-      " [ 0.         -0.70710678 -0.70710678]]\n",
-      "R3= [[ 1.  0.  0.]\n",
-      " [-0.  1.  0.]\n",
-      " [ 0.  0.  1.]]\n"
+      "R1i= [[ 1.          0.          0.        ]\n",
+      " [ 0.          0.41227298  0.91106037]\n",
+      " [ 0.         -0.91106037 -0.41227298]]\n",
+      "R3w= [[ 0.35868078  0.93346028  0.        ]\n",
+      " [-0.93346028  0.35868078  0.        ]\n",
+      " [ 0.          0.          1.        ]]\n"
      ]
     }
    ],
    "source": [
     "#Define Rotation matrices\n",
     "#First one about Z axis an angle Omega\n",
-    "R3=np.array(((np.cos(Omega),np.sin(Omega),0),(-np.sin(Omega),np.cos(Omega),0),(0,0,1)))\n",
-    "R2=np.array(((1,0,0),(0,np.cos(i),np.sin(i)),(0,-np.sin(i),-np.cos(i))))\n",
-    "R1=np.array(((np.cos(omega),np.sin(omega),0),(-np.sin(omega),np.cos(omega),0),(0,0,1)))\n",
-    "print(\"R1=\",R1)\n",
-    "print(\"R2=\",R2)\n",
-    "print(\"R3=\",R3)"
+    "R3W=np.array(((np.cos(Omega),np.sin(Omega),0),(-np.sin(Omega),np.cos(Omega),0),(0,0,1)))\n",
+    "R1i=np.array(((1,0,0),(0,np.cos(i),np.sin(i)),(0,-np.sin(i),-np.cos(i))))\n",
+    "R3w=np.array(((np.cos(omega),np.sin(omega),0),(-np.sin(omega),np.cos(omega),0),(0,0,1)))\n",
+    "print(\"R3W=\",R3W)\n",
+    "print(\"R1i=\",R1i)\n",
+    "print(\"R3w=\",R3w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "65393016",
    "metadata": {},
    "outputs": [
@@ -138,21 +151,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QXx= [[ 0.93969262  0.24184476  0.24184476]\n",
-      " [-0.34202014  0.66446302  0.66446302]\n",
-      " [ 0.         -0.70710678 -0.70710678]]\n"
+      "QXx= [[ 0.46899345 -0.23832587  0.85043867]\n",
+      " [-0.11591835  0.93796475  0.32677984]\n",
+      " [-0.87556158 -0.25183905 -0.41227298]]\n"
      ]
     }
    ],
    "source": [
     "#Multiply matrices to obtain QXx=R1R2R3\n",
-    "QXx=R1@R2@R3\n",
+    "QXx=R3w@R1i@R3W\n",
     "print(\"QXx=\",QXx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "a5565ae2",
    "metadata": {},
    "outputs": [
@@ -160,9 +173,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QxX= [[ 0.93969262 -0.34202014  0.        ]\n",
-      " [ 0.24184476  0.66446302 -0.70710678]\n",
-      " [ 0.24184476  0.66446302 -0.70710678]]\n"
+      "QxX= [[ 0.46899345 -0.11591835 -0.87556158]\n",
+      " [-0.23832587  0.93796475 -0.25183905]\n",
+      " [ 0.85043867  0.32677984 -0.41227298]]\n"
      ]
     }
    ],
@@ -174,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "508f4ecf",
    "metadata": {},
    "outputs": [
@@ -182,14 +195,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r= [[5776.4114103 ]\n",
-      " [2358.21008327]\n",
-      " [2358.21008327]]  km\n",
-      "r= [[5776.4114103  2358.21008327 2358.21008327]]  km\n",
-      "v= [[-3.90249889]\n",
-      " [ 4.87223198]\n",
-      " [ 4.87223198]]  km/s\n",
-      "v= [[-3.90249889  4.87223198  4.87223198]]  km/s\n"
+      "r= [[16382.70656947]\n",
+      " [-7948.80001338]\n",
+      " [29937.08248615]]  km\n",
+      "r= [[16382.70656947 -7948.80001338 29937.08248615]]  km\n",
+      "v= [[-0.49095502]\n",
+      " [ 3.85200443]\n",
+      " [ 1.3103546 ]]  km/s\n",
+      "v= [[-0.49095502  3.85200443  1.3103546 ]]  km/s\n"
      ]
     }
    ],
@@ -216,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "9a19fb70",
    "metadata": {},
    "outputs": [
@@ -224,20 +237,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R= [[ 9.39692621e-01  2.41844763e-01  2.41844763e-01]\n",
-      " [-3.42020143e-01  6.64463024e-01  6.64463024e-01]\n",
-      " [ 2.77555756e-17 -7.07106781e-01  7.07106781e-01]]\n"
+      "R= [[ 0.46899345 -0.23832587  0.85043867]\n",
+      " [-0.11591835  0.93796475  0.32677984]\n",
+      " [-0.87556158 -0.25183905  0.41227298]]\n",
+      "QXx= [[ 0.46899345 -0.23832587  0.85043867]\n",
+      " [-0.11591835  0.93796475  0.32677984]\n",
+      " [-0.87556158 -0.25183905 -0.41227298]]\n"
      ]
     }
    ],
    "source": [
     "R=Rotation.from_euler(\"ZXZ\",[-omega,-i,-Omega])\n",
-    "print(\"R=\",R.as_matrix())"
+    "print(\"R=\",R.as_matrix())\n",
+    "print(\"QXx=\",QXx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "7f3f7d49",
    "metadata": {},
    "outputs": [
@@ -245,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5776.4114103  2358.21008327 2358.21008327]  km\n"
+      "[16382.70656947 -7948.80001338 29937.08248615]  km\n"
      ]
     }
    ],
@@ -256,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "07ed670d",
    "metadata": {},
    "outputs": [
@@ -264,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.90249889  4.87223198  4.87223198]  km/s\n"
+      "[-0.49095502  3.85200443  1.3103546 ]  km/s\n"
      ]
     }
    ],
@@ -320,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
